--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": "6.13.4",
+    "node": "12.16.1",
+    "yarn": "1.22.10"
   }
 }
